<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.PocketExpenseManager.DeleteExpense">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnselectexpense"
        android:id="@+id/btnselectexpense"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="onSelectExpense"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt2"
        android:id="@+id/txt2"
        android:layout_below="@+id/txtname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtboxexpensename"
        android:layout_below="@+id/txt2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLength="50"
        android:layout_alignRight="@+id/btnselectexpense"
        android:layout_alignEnd="@+id/btnselectexpense"
        android:layout_marginTop="-10dp"
        android:inputType="none"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt3"
        android:id="@+id/txt3"
        android:layout_below="@+id/txtboxexpensename"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/txt3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/txtboxexpensename"
        android:layout_alignEnd="@+id/txtboxexpensename"
        android:layout_marginTop="7dp"
        tools:listheader="Select a Category"
        android:clickable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt4"
        android:id="@+id/txt4"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtboxamount3"
        android:layout_below="@+id/txt4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/spinner"
        android:layout_alignEnd="@+id/spinner"
        android:inputType="none"
        android:layout_marginTop="-10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt5"
        android:id="@+id/txt5"
        android:layout_below="@+id/txtboxamount3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtboxdate"
        android:layout_below="@+id/txt5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/txtboxamount3"
        android:layout_alignEnd="@+id/txtboxamount3"
android:inputType="none"
        android:layout_marginTop="-10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt6"
        android:id="@+id/txt6"
        android:layout_below="@+id/txtboxdate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_toRightOf="@+id/txtboxamount3"
        android:src="@mipmap/cal"
        android:layout_alignBottom="@+id/txtboxdate"
        android:layout_alignTop="@+id/txtboxdate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btndelete"
        android:id="@+id/btndelete"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/txt5"
        android:layout_toEndOf="@+id/txt5"
        android:onClick="deleteExpense"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btncancel"
        android:id="@+id/btncancel"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:onClick="cancelActivity"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:src="@drawable/ebipg"

        android:layout_below="@+id/txt6"
        android:layout_marginTop="4dp"
        android:layout_above="@+id/btndelete"
        android:layout_alignRight="@+id/txt2"
        android:layout_alignEnd="@+id/txt2" />

</RelativeLayout>
